fix card items alignment to center

--- a/src/components/task.scss
+++ b/src/components/task.scss
@@ -28,7 +28,7 @@ $danger: #e25858;
   padding: 1rem;
   gap: 0.75rem;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   
   .checked-circle {
     top: 1rem;
